test/libsolidity/syntaxTests/pragma/broken_version_5.sol
pragma solidity 88_;
// ----
// ParserError 1684: (0-20): Found version pragma, but failed to parse it. Please ensure there is a trailing semicolon.
